[package]
name = "calcualtor1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
tokio = { version = "1.2", features = ["full"] }
blake2 = "0.10.6"
bs58 = "0.5.0"
fastcrypto= {git = "https://github.com/MystenLabs/fastcrypto.git", package = "fastcrypto", version = "0.1"}
ark-std = "0.4.0"
